# lifegraph-kg

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: 01_basic_log.py  02_multi_episode.py  03_bi_temporal.py  04_hygiene.py  README.md
lifegraph_kg/: __init__.py  classes.py
lifegraph_kg/extract/: __init__.py  grounding.py  prompt.py  schema.py
lifegraph_kg/hygiene/: __init__.py  dedup.py  normalize.py  proposals.py
lifegraph_kg/kg/: __init__.py  edge.py  episode.py  scheduler.py
lifegraph_kg/kg/store/: __init__.py  kuzu.py  postgres.py  rest.py  sqlite.py
lifegraph_kg/kg/store/migrations/: 0001_initial.sql  0002_hygiene.sql  0003_task_support.sql  0004_user_scoping.sql  0005_duration.sql  0006_timezone.sql
lifegraph_kg/llm/: __init__.py  client.py
scripts/migrate_from_d1/: README.md  backfill_duration.py  backfill_timezone.py  dump_for_mcp.py  migrate_to_lifegraph_kg.py  migrate_todos.py  pull_all_from_d1.py  push_to_supabase.py  push_via_rest.py  verify.py
tests/: __init__.py  test_eval_scoring.py  test_extraction.py  test_hygiene.py  test_kg_store.py  test_scheduler.py  test_skeleton.py  test_storage_drivers.py  test_tasks.py
tests/eval/: README.md  __init__.py  types.py
tests/eval/benchmarks/: __init__.py
tests/eval/benchmarks/epmg/: README.md  __init__.py
tests/eval/benchmarks/locomo/: README.md  __init__.py
tests/eval/benchmarks/longmemeval/: README.md  __init__.py
tests/eval/fixtures/corpora/: sample-week.json
tests/eval/fixtures/extraction/: basic-person-place.json  multi-entity.json
tests/eval/fixtures/hygiene/: spelling-variants.json
tests/eval/fixtures/recall/: tpp-query.json
tests/eval/fixtures/temporal/: lives-in-supersede.json
tests/eval/runners/: __init__.py  run_all.py  run_extraction.py  run_hygiene.py  run_perf.py  run_recall.py  run_temporal.py
tests/eval/scoring/: __init__.py  extraction.py  hygiene.py  llm_judge.py  perf.py  recall.py  temporal.py
